--- a/sprout.html
+++ b/sprout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>Log in to the site j;osklshl| Sprout</title>
+<title>Log in to the site | Sprout</title>
 
 <head>
     <style>
