--- a/sprout.html
+++ b/sprout.html
@@ -29,7 +29,12 @@
             background-repeat: no-repeat;
             background-size: cover;
             align-items: center;
-            height: 100%;
+            margin: 0px;
+            flex-direction: row;
+            flex-wrap: wrap;
+            flex: 1;
+            height: 100vh;
+            background-position: center;
             
         }
 
@@ -89,6 +94,8 @@
 
         .main {
             width: 300px;
+            display: flex;
+            flex-wrap: wrap;
         }
 
         .so {
@@ -129,6 +136,7 @@
             <div class="Hi">
                 <h2>Hi, Welcome to Sproutlms</h2>
             </div>
+            
             <div class="p" style="color: gray;">
                 <p>
                 <h4> Enter your details to log in your account </h4>
